--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,58 @@
+body {
+  background-color: rgb(96, 96, 96, 0.08);
+}
 h1 {
   text-align: center;
 }
+h2,
+h3,
+h4 {
+  margin: 0 0 5px;
+  font-size: 28px;
+}
+
+body {
+  font-family: sans-serif;
+}
+select {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  font-size: 18px;
+  border-radius: 4px;
+}
+.container {
+  max-width: 600px;
+  margin: 60px auto;
+  background-color: white;
+  padding: 50px;
+  border-radius: 10px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+.date {
+  opacity: 0.7;
+}
+.city {
+  display: flex;
+  margin: 20px 0;
+  justify-content: space-between;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+  padding: 30px 0;
+}
+.city:last-child {
+  border: none;
+}
+.time {
+  font-size: 48px;
+  font-weight: bold;
+}
+.time small {
+  font-size: 24px;
+  vertical-align: middle;
+  line-height: 48px;
+}
 footer {
   text-align: center;
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.8);
 }
